--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Letto Max Choice Type</string>
+    <string name="app_name">To Go To Quick Type</string>
 </resources>
